...
    <string name="text_details">"Details"</string>
    <string name="text_shop">"Shop"</string>
    <string name="text_vouchers">"Vouchers"</string>
    <string name="text_badges">"Badges"</string>
    <string name="scan_the_qr_code_text">"Scan the QR Code or enter your membership number at participating store and online sites to earn and redeem points"</string>

    <string name="label_transactions_recent">Recent</string>
    <string name="label_transactions_one_month_ago">One month ago</string>

    <string name="label_empty_promotions">No promotions yet</string>
<!--    <string name="label_empty_vouchers">You have no Vouchers Available.</string>-->
    <string name="label_empty_vouchers">No vouchers yet \nWhen you have vouchers available for redemption, you’ll see them here.</string>
    <string name="label_empty_vouchers_redeem_tab">Nothing to report \nAfter you redeem a voucher, you’ll find it here.</string>
...
    <string name="header_label_payment_methods">Payment Methods</string>
    <string name="header_label_orders">Orders</string>
    <string name="header_label_support">Support</string>
    <string name="header_label_dates">Date Format</string>
    <string name="header_label_favourite">Favorites</string>
    <string name="header_label_game_zone">Game Zone</string>
    <string name="header_label_my_referrals">My Referrals</string>
    <string name="label_opt_in">"Opt In"</string>
    <string name="label_opt_out">"Opt Out"</string>
    <string name="text_voucher_copy_copied">"Code was copied."</string>
    <string name="login_error_message">The username or password you entered is incorrect. Please try again.</string>
    <string name="receipt_scanning">Receipt Scanning</string>
    <string name="header_label_receipt">Receipts</string>
...
    <string name="button_try_again">Try Again</string>
    <string name="scanning_congrats">Your receipt is uploaded!</string>
    <string name="scanning_congrats_background">Congratulations Screen Background</string>
    <string name="scanning_congrats_gift_icon">Congrats Gift Icon</string>
    <string name="scanning_congrats_subtitle">We’ve credited %s points for the uploaded receipt.</string>
    <string name="scanning_receipt_subtitle_no_points">Calculating loyalty points for the eligible items can take a while. Check back later.</string>
    <string name="scanning_done">Done</string>
    <string name="scan_another_receipt">Upload Another Receipt</string>
    <string name="scan_progress_indicator">Generating preview…</string>
    <string name="scan_progress_subheader">Hang in there! This may take a minute.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_message">The camera is important for this app. Please grant the permission.</string>
...
    <string name="game_error_dialog_ok">OK</string>
    <string name="game_error_msg">Oops! Something went wrong \u2028 while processing the request. Try again.</string>
    <string name="play_more_text">Play More</string>

    <!-- My Referrals Strings Start -->
    <string name="referral_card_content_description">Referral Card</string>
    <string name="referral_card_button_text">Refer Now</string>
    <string name="referral_tab_success">Completed</string>
    <string name="referral_tab_in_progress">In Progress</string>
    <string name="recent_referrals_section_name">Recent</string>
    <string name="referral_one_month_ago_section_name">One Month Ago</string>
    <string name="referrals_older_than_three_months_section_name">Three Months Ago</string>
    <string name="purchase_status_completed">Purchase Completed</string>
    <string name="purchase_status_pending">Invitations Sent</string>
    <string name="purchase_status_signed_up">Signed Up</string>
    <string name="my_referral_card_header"><![CDATA[Your Referrals in Last <b>%s</b> Days]]></string>
    <string name="my_referral_sent_label">Invitations Sent</string>
    <string name="my_referrals_accepted_label">Invitations Accepted</string>
    <string name="my_referrals_vouchers_earned_label">Vouchers Earned</string>
    <string name="refer_friend_banner_content_description">Refer Friend Banner</string>
    <string name="refer_a_friend_and_earn_header">Start Referring</string>
    <string name="refer_a_friend_and_earn_sub_header">Your referral code is ready! Share the referral code with your friends and get rewarded when they place their first order.</string>
    <string name="separate_emails_with_commas">Add a comma after each email address.</string>
    <string name="share_via">Share Invite</string>
    <string name="share_via_facebook_icon_description">Share via Facebook</string>
    <string name="share_via_instagram_icon_description">Share via Instagram</string>
    <string name="share_via_whatsapp_icon_description">Share via Whatsapp</string>
    <string name="share_via_twitter_icon_description">Share via Twitter</string>
    <string name="share_via_icon_description">Share via</string>
    <string name="friends_email_address_placeholder">Enter the email addresses of your friends…</string>
    <string name="forward_arrow_content_description">Forward Arrow</string>
    <string name="tap_to_copy">Copy</string>
    <string name="share_referral_message">Use my referral link to sign up: %1$s</string>
    <string name="emails_warning_message_multiple">Please enter valid E-mails!</string>
    <string name="share_referral_code_intent_chooser">Share Referral Code</string>
    <string name="selected_app_is_not_installed">Selected app is not installed!</string>

    <string name="referral_signup_button_text">Sign Up</string>
...
    <string name="days_ago_label">%s Days Ago</string>
    <string name="join_referral_program_header">Join Referral Program</string>
    <string name="join_referral_program_description">Join our referral program and share your referral code with friends to get rewarded.</string>
    <string name="failed_try_again">We couldn’t send an invitation email to your referred friends. Try again.</string>
    <string name="emails_sent_successfully">An invitation email was sent to your friends with your referral link.</string>
    <string name="enrolment_not_processed_message">We couldn’t enroll you as a member of the referral program. Try joining again.</string>
    <string name="no_referrals_label">After you refer a friend, you’ll see it here.</string>
    <string name="invalid_email_error_message">Something doesn\'t look right with one of the email addresses.</string>
    <string name="join_referral_program_button_text">Join Referral Program</string>
    <string name="referral_back_button_text">Back</string>
    <string name="referral_promotion_expired_error_message">You missed the boat\n\nYou can no longer refer your friends because the referral promotion has expired.</string>
    <string name="referral_feature_not_enabled_error_message">The referral promotion isn’t available.</string>
    <!-- My Referrals Strings End -->

    <string name="text_go_to_voucher_section">Go to Vouchers</string>
    <string name="text_better_luck_reward">Thank you for playing! Stay tuned for more offers.</string>
...
