...
        const val TEST_TAG_RECEIPT_PROCESS_SCREEN = "receipt_process_screen"
        const val TEST_TAG_RECEIPT_TABLE_SCREEN = "receipt_table_screen"
        const val TEST_TAG_ROW_STORE_DETAILS = "row_store_details"
        const val TEST_TAG_RECEIPT_TABLE = "receipt_table"
        const val TEST_TAG_CONGRATULATIONS_SCREEN = "congratulations_screen"
        const val TEST_TAG_TRY_AGAIN_SCANNED_RECEIPT = "screened_receipt-try_again_button"
        const val TEST_TAG_TRY_AGAIN_ERROR_SCREEN = "error_screen_try_again_button"
        const val TEST_TAG_ERROR_SCREEN = "error_screen_tag"
        const val MY_PROMOTION_FULL_SCREEN_HEADER = "my_promotion_header"
        const val MY_PROFILE_FULL_SCREEN_HEADER = "my_profile_header"
        const val MORE_FULL_SCREEN_HEADER = "more_header"
        const val TEST_TAG_CHECKOUT_DELIVER_TO_ADDRESS = "checkout_deliver_to_address_button"
        const val TEST_TAG_CHECKOUT_ADD_TO_CART ="checkout_add_to_cart_button"
        const val TEST_TAG_MANUAL_REVIEW_CLOSE_POPUP_ICON ="manual_review_closepopup_icon"
...
        const val TEST_TAG_BADGE_TABS_ROW= "test_tag_badge_tabs_row"
        const val TEST_TAG_BADGE_FULLSCREEN_ITEM= "test_tag_badge_full_screen_item"
        const val TEST_TAG_BADGE_POPUP= "test_tag_badge_popup"
        const val TEST_TAG_BADGE_NAME= "test_tag_badge_name"
        const val TEST_TAG_BADGE_DESCRIPTION= "test_tag_badge_description"

        const val TEST_TAG_EMPTY_VIEW= "empty_view"
        const val TEST_TAG_CLOSE_REFER_POPUP= "close_refer_popup"
        const val REFER_FRIEND_PROMOTION_NAME= "REFER_FRIEND_PROMOTION_NAME"
        const val REFER_FRIEND_PROMOTION_DESC= "REFER_FRIEND_PROMOTION_DESC"

    }
}
